--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -11,14 +11,27 @@
         <div class="exercise">
             <p>Lat Pulldown</p>
             <div class="gif-container">
-                <img src="back\back-extension.gif" alt="Lat Pulldown">
+                <img src="back\back-extension.gif" alt="Lat Pulldown" height="300px" width="300px">
             </div>
         </div>
         <div class="exercise">
             <p>Pull-Ups</p>
             <div class="gif-container">
-                <img src="back\Barbell-Deadlift.gif" alt="Pull-Ups">
+                <img src="back\Barbell-Deadlift.gif" alt="Pull-Ups" height="300px" width="300px">
             </div>
+        </div>
+    </div>
+    <div class="item wow bounceInUp">
+        <div class="item-img">
+             <img src="images/class1.jpg" alt="classes" />
+             <div class="price">
+                  $99
+             </div>
+        </div>
+        <div class="item-text">
+              <h4>Stretching Training</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="">Get Details</a>
         </div>
     </div>
 
