--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Gym Website Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="animate.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
   <style>
     .wow:first-child {
       visibility: hidden;
@@ -62,18 +62,18 @@
   	  	  	   <div class="box wow bounceInUp">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about1.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="back/Barbell-Deadlift.gif" alt="about" />
   	  	  	   	   	   </div>
                        <div class="text">
-                       	   <h4>Free Consultation</h4>
-                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                       	   <h4>Barbell Deadlift</h4>
+                       	   <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> </b>Intensity</b>: 9/10 <br> </b>Level</b>: Intermediate to Advanced</p>
                        </div>
   	  	  	   	   </div>
   	  	  	   </div>
   	  	  	   	<div class="box wow bounceInUp" data-wow-delay="0.2s">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about2.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="back/seated row.gif" alt="about" />
   	  	  	   	   	   </div>
                        <div class="text">
                        	   <h4>Best Training</h4>
@@ -84,7 +84,7 @@
   	  	  	   <div class="box wow bounceInUp" data-wow-delay="0.4s">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="images/about3.jpg" alt="about" />
+  	  	  	   	   	   	  <img src="back/t-bar-rows.gif" alt="about" />
   	  	  	   	   	   </div>
                        <div class="text">
                        	   <h4>Build Perfect Body</h4>
@@ -442,7 +442,7 @@
 })
 
 </script>
-<script src="js/wow.min.js"></script>
+<script src="wow.min.js"></script>
 <script>
     wow = new WOW(
       {
