--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -59,24 +59,13 @@
   <section class="about" id="about">
   	  <div class="container">
   	  	  <div class="content">
-  	  	  	   <div class="box wow bounceInUp">
-  	  	  	   	   <div class="inner">
-  	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="back/Barbell-Deadlift.gif" alt="about" />
-  	  	  	   	   	   </div>
-                       <div class="text">
-                       	   <h4>Barbell Deadlift</h4>
-                       	   <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> </b>Intensity</b>: 9/10 <br> </b>Level</b>: Intermediate to Advanced</p>
-                       </div>
-  	  	  	   	   </div>
-  	  	  	   </div>
   	  	  	   	<div class="box wow bounceInUp" data-wow-delay="0.2s">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
   	  	  	   	   	   	  <img src="back/seated row.gif" alt="about" />
   	  	  	   	   	   </div>
                        <div class="text">
-                       	   <h4>Best Training</h4>
+                       	   <h4>Seated Cable Row</h4>
                        	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
                        </div>
   	  	  	   	   </div>
@@ -87,11 +76,22 @@
   	  	  	   	   	   	  <img src="back/t-bar-rows.gif" alt="about" />
   	  	  	   	   	   </div>
                        <div class="text">
-                       	   <h4>Build Perfect Body</h4>
+                       	   <h4>T-Bar Rows</h4>
                        	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
                        </div>
   	  	  	   	   </div>
   	  	  	   </div>
+                     <div class="box wow bounceInUp">
+                        <div class="inner">
+                               <div class="img">
+                                     <img src="back/Barbell-Deadlift.gif" alt="about" />
+                               </div>
+                   <div class="text">
+                          <h4>Barbell Deadlift</h4>
+                          <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> <b>Intensity</b>: 9/10 <br> <b>Level</b>: Intermediate to Advanced</p>
+                   </div>
+                        </div>
+                 </div>
   	  	  </div>
   	  </div>
   </section>
