--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -59,6 +59,17 @@
   <section class="about" id="about">
   	  <div class="container">
   	  	  <div class="content">
+                <div class="box wow bounceInUp" data-wow-delay="0.2s">
+  	  	  	   	   <div class="inner">
+  	  	  	   	   	   <div class="img">
+  	  	  	   	   	   	  <img src="back/Lat-Pulldown.gif" alt="about" />
+  	  	  	   	   	   </div>
+                       <div class="text">
+                       	   <h4>Lat Pulldown</h4>
+                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                       </div>
+  	  	  	   	   </div>
+  	  	  	   </div>
   	  	  	   	<div class="box wow bounceInUp" data-wow-delay="0.2s">
   	  	  	   	   <div class="inner">
   	  	  	   	   	   <div class="img">
@@ -70,32 +81,103 @@
                        </div>
   	  	  	   	   </div>
   	  	  	   </div>
-  	  	  	   <div class="box wow bounceInUp" data-wow-delay="0.4s">
-  	  	  	   	   <div class="inner">
-  	  	  	   	   	   <div class="img">
-  	  	  	   	   	   	  <img src="back/t-bar-rows.gif" alt="about" />
-  	  	  	   	   	   </div>
-                       <div class="text">
-                       	   <h4>T-Bar Rows</h4>
-                       	   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                       </div>
-  	  	  	   	   </div>
-  	  	  	   </div>
-                     <div class="box wow bounceInUp">
+                <div class="box wow bounceInUp" data-wow-delay="0.2s">
                         <div class="inner">
                                <div class="img">
-                                     <img src="back/Barbell-Deadlift.gif" alt="about" />
+                                     <img src="back/Face-Pull.gif" alt="about" />
                                </div>
                    <div class="text">
-                          <h4>Barbell Deadlift</h4>
-                          <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> <b>Intensity</b>: 9/10 <br> <b>Level</b>: Intermediate to Advanced</p>
+                          <h4>Face Pulls</h4>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
                    </div>
                         </div>
                  </div>
   	  	  </div>
   	  </div>
-  </section>
- <!-- End About -->
+    </section>
+
+ <section class="about" id="about">
+    <div class="container">
+          <div class="content">
+            <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                        <div class="inner">
+                               <div class="img">
+                                     <img src="back/t-bar-rows.gif" alt="about" />
+                               </div>
+                   <div class="text">
+                          <h4>T-Bar Rows</h4>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                   </div>
+                        </div>
+                 </div>
+                     <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                        <div class="inner">
+                               <div class="img">
+                                     <img src="back/Inverted-Row.gif" alt="about" />
+                               </div>
+                   <div class="text">
+                          <h4>Inverted Row</h4>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                   </div>
+                        </div>
+                 </div>
+                 <div class="box wow bounceInUp">
+                    <div class="inner">
+                           <div class="img">
+                                 <img src="back/Barbell-Deadlift.gif" alt="about" />
+                           </div>
+               <div class="text">
+                      <h4>Barbell Deadlift</h4>
+                      <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> <b>Intensity</b>: 9/10 <br> <b>Level</b>: Intermediate to Advanced</p>
+               </div>
+                    </div>
+             </div>
+          </div>
+    </div>
+</section>
+
+<section class="about" id="about">
+    <div class="container">
+          <div class="content">
+            <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                        <div class="inner">
+                               <div class="img">
+                                     <img src="back/t-bar-rows.gif" alt="about" />
+                               </div>
+                   <div class="text">
+                          <h4>T-Bar Rows</h4>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                   </div>
+                        </div>
+                 </div>
+                     <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                        <div class="inner">
+                               <div class="img">
+                                     <img src="back/Inverted-Row.gif" alt="about" />
+                               </div>
+                   <div class="text">
+                          <h4>Inverted Row</h4>
+                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                   </div>
+                        </div>
+                 </div>
+                 <div class="box wow bounceInUp">
+                    <div class="inner">
+                           <div class="img">
+                                 <img src="back/Barbell-Deadlift.gif" alt="about" />
+                           </div>
+               <div class="text">
+                      <h4>Barbell Deadlift</h4>
+                      <p><b>Muscles Targeted</b>: Erector spinae, glutes, hamstrings, traps, core <br> <b>Intensity</b>: 9/10 <br> <b>Level</b>: Intermediate to Advanced</p>
+               </div>
+                    </div>
+             </div>
+          </div>
+    </div>
+</section>
+
+
+<!-- End About -->
 
 
  <!-- Start Service -->
