--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -4,7 +4,7 @@
 	<title>Gym Website Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="animate.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style_back.css">
   <style>
     .wow:first-child {
       visibility: hidden;
@@ -50,7 +50,6 @@
   	      	  <i class="fa fa-angle-down" aria-hidden="true"></i>
   	      </a>
   	  <!-- go down -->
-
   </section>
   <!-- End Home -->
 
