--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -42,7 +42,7 @@
   <!-- Start Home -->
   <section class="home wow flash" id="home">
   	 <div class="container">
-  	 	  <h1 class="wow slideInLeft" data-wow-delay="1s">It's <span>gym</span> time. Let's go</h1>
+  	 	  <h1 class="wow slideInLeft" data-wow-delay="1s">  Here's a list of <span>BACK</span> Exercises. Let's go</h1>
   	 	  <h1 class="wow slideInRight" data-wow-delay="1s">We are ready to <span>fit you</span></h1>
   	 </div>
   	  <!-- go down -->
