--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -148,7 +148,7 @@
      </div>
  </section>
  
- <!-- Section 3 -->
+<!-- Section 3 -->
  <section class="about" id="about">
      <div class="container">
          <div class="content">
@@ -194,6 +194,54 @@
          </div>
      </div>
  </section>
+
+ <!-- Section 4 -->
+ <section class="about" id="about">
+    <div class="container">
+        <div class="content">
+            <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                <div class="inner">
+                    <div class="img">
+                        <img src="back/reverse-fly.gif" alt="Reverse Fly" />
+                    </div>
+                    <div class="text">
+                        <h4>Reverse Fly</h4>
+                        <p><b>Muscles Targeted:</b> Rear deltoids, rhomboids, trapezius<br>
+                           <b>Intensity:</b> 6/10<br>
+                           <b>Level:</b> Beginner to Intermediate</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box wow bounceInUp" data-wow-delay="0.2s">
+                <div class="inner">
+                    <div class="img">
+                        <img src="back/chest-supported-row.gif" alt="Chest Supported Row" />
+                    </div>
+                    <div class="text">
+                        <h4>Chest Supported Row</h4>
+                        <p><b>Muscles Targeted:</b> Latissimus dorsi, rhomboids, trapezius, rear deltoids, biceps<br>
+                           <b>Intensity:</b> 7/10<br>
+                           <b>Level:</b> Intermediate</p>
+                    </div>
+                </div>
+            </div>
+            <div class="box wow bounceInUp">
+                <div class="inner">
+                    <div class="img">
+                        <img src="back/workout-muscles.gif" alt="Bent Over Barbell Row" />
+                    </div>
+                    <div class="text">
+                        <h4>Bent Over Barbell Row</h4>
+                        <p><b>Muscles Targeted:</b> Latissimus dorsi, rhomboids, trapezius, rear deltoids, biceps<br>
+                           <b>Intensity:</b> 8/10<br>
+                           <b>Level:</b> Intermediate</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
  
 <!-- End About -->
 
