--- a/back-catalogue.html
+++ b/back-catalogue.html
@@ -18,7 +18,7 @@
  <header>
  	 <div class="container">
  	 	<div class="logo">
- 	 		 <a href="">Fitness <span>Club</span></a>
+ 	 		 <a href="">Fit <span>Track</span></a>
  	 	</div>
  	 	<a href="javascript:void(0)" class="ham-burger">
  	       <span></span>	
@@ -39,18 +39,7 @@
  </header>
  <!-- End Header  -->
 
-  <!-- Start Home -->
-  <section class="home wow flash" id="home">
-  	 <div class="container">
-  	 	  <center><h1 class="wow slideInLeft" data-wow-delay="1s">  Here's a list of <span>BACK</span> Exercises. Let's go</h1></center>
-  	 </div>
-  	  <!-- go down -->
-  	      <a href="#about" class="go-down">
-  	      	  <i class="fa fa-angle-down" aria-hidden="true"></i>
-  	      </a>
-  	  <!-- go down -->
-  </section>
-  <!-- End Home -->
+ <br/><br/><br/>
 
 
  <!-- Start About -->
