--- a/legs.html
+++ b/legs.html
@@ -3,17 +3,17 @@
 <head>
 	<title>Gym Website Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="animate.css">
 	<link rel="stylesheet" type="text/css" href="style_back.css">
   <style>
     .wow:first-child {
       visibility: hidden;
     }
   </style>
-  
+
 </head>
 <body>
- 
+
  <!-- Start Header  -->
  <header>
  	 <div class="container">
@@ -38,8 +38,6 @@
  	 </div>
  </header>
  <!-- End Header  -->
-
-
 
  <!-- Start About -->
   <!-- Section 1 -->
@@ -88,7 +86,7 @@
          </div>
      </div>
  </section>
- 
+
  <!-- Section 2 -->
  <section class="about" id="about">
      <div class="container">
@@ -135,7 +133,7 @@
          </div>
      </div>
  </section>
- 
+
 <!-- Section 3 -->
  <section class="about" id="about">
      <div class="container">
@@ -229,4 +227,60 @@
         </div>
     </div>
 </section>
+
+
 <!-- End About -->
+ <!-- jquery -->
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+
+      $(".ham-burger, .nav ul li a").click(function(){
+
+        $(".nav").toggleClass("open")
+
+        $(".ham-burger").toggleClass("active");
+      })      
+      $(".accordian-container").click(function(){
+      	$(".accordian-container").children(".body").slideUp();
+      	$(".accordian-container").removeClass("active")
+      	$(".accordian-container").children(".head").children("span").removeClass("fa-angle-down").addClass("fa-angle-up")
+      	$(this).children(".body").slideDown();
+      	$(this).addClass("active")
+      	$(this).children(".head").children("span").removeClass("fa-angle-up").addClass("fa-angle-down")
+      })
+
+       $(".nav ul li a, .go-down").click(function(event){
+         if(this.hash !== ""){
+
+              event.preventDefault();
+
+              var hash=this.hash; 
+
+              $('html,body').animate({
+                scrollTop:$(hash).offset().top
+              },800 , function(){
+                 window.location.hash=hash;
+              });
+
+              // add active class in navigation
+              $(".nav ul li a").removeClass("active")
+              $(this).addClass("active")
+         }
+      })
+})
+
+</script>
+<script src="wow.min.js"></script>
+<script>
+    wow = new WOW(
+      {
+        animateClass: 'animated',
+        offset:       0,
+      }
+    );
+    wow.init();
+  </script>
+</body>
+</html>
