--- a/legs.html
+++ b/legs.html
@@ -18,7 +18,7 @@
  <header>
  	 <div class="container">
  	 	<div class="logo">
- 	 		 <a href="">Fitness <span>Club</span></a>
+ 	 		 <a href="">Fit<span>Track</span></a>
  	 	</div>
  	 	<a href="javascript:void(0)" class="ham-burger">
  	       <span></span>	
