--- a/chest.html
+++ b/chest.html
@@ -10,15 +10,15 @@
       visibility: hidden;
     }
   </style>
-  
+
 </head>
 <body>
- 
+
  <!-- Start Header  -->
  <header>
  	 <div class="container">
  	 	<div class="logo">
- 	 		 <a href="">Fitness <span>Club</span></a>
+ 	 		 <a href="">Fit<span>Track</span></a>
  	 	</div>
  	 	<a href="javascript:void(0)" class="ham-burger">
  	       <span></span>	
@@ -38,6 +38,9 @@
  	 </div>
  </header>
  <!-- End Header  -->
+
+ <br/><br/><br/>
+
 
  <!-- Start About -->
   <!-- Section 1 -->
@@ -86,7 +89,7 @@
          </div>
      </div>
  </section>
- 
+
  <!-- Section 2 -->
  <section class="about" id="about">
      <div class="container">
@@ -133,7 +136,7 @@
          </div>
      </div>
  </section>
- 
+
 <!-- Section 3 -->
  <section class="about" id="about">
      <div class="container">
@@ -228,5 +231,60 @@
     </div>
 </section>
 
- 
+
 <!-- End About -->
+
+ <!-- jquery -->
+
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+	$(document).ready(function(){
+
+      $(".ham-burger, .nav ul li a").click(function(){
+
+        $(".nav").toggleClass("open")
+
+        $(".ham-burger").toggleClass("active");
+      })      
+      $(".accordian-container").click(function(){
+      	$(".accordian-container").children(".body").slideUp();
+      	$(".accordian-container").removeClass("active")
+      	$(".accordian-container").children(".head").children("span").removeClass("fa-angle-down").addClass("fa-angle-up")
+      	$(this).children(".body").slideDown();
+      	$(this).addClass("active")
+      	$(this).children(".head").children("span").removeClass("fa-angle-up").addClass("fa-angle-down")
+      })
+
+       $(".nav ul li a, .go-down").click(function(event){
+         if(this.hash !== ""){
+
+              event.preventDefault();
+
+              var hash=this.hash; 
+
+              $('html,body').animate({
+                scrollTop:$(hash).offset().top
+              },800 , function(){
+                 window.location.hash=hash;
+              });
+
+              // add active class in navigation
+              $(".nav ul li a").removeClass("active")
+              $(this).addClass("active")
+         }
+      })
+})
+
+</script>
+<script src="wow.min.js"></script>
+<script>
+    wow = new WOW(
+      {
+        animateClass: 'animated',
+        offset:       0,
+      }
+    );
+    wow.init();
+  </script>
+</body>
+</html>
